refactor: commit sha link in message (#382)
* remove the built-in commit issue tracker rule
* hyperlink in commit message now supports commit sha

--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -284,6 +284,10 @@
   <Style Selector="Run.issue_link">
     <Setter Property="Foreground" Value="{DynamicResource Brush.Link}"/>
   </Style>
+  <Style Selector="Run.commit_link">
+    <Setter Property="Foreground" Value="DarkOrange"/>
+    <Setter Property="TextDecorations" Value="Underline"/>
+  </Style>
   
   <Style Selector="SelectableTextBlock">
     <Setter Property="HorizontalAlignment" Value="Left"/>
