code_review: PR #386
* rename `FirstParentFilterToggled` to `EnableFirstParentInHistories`
* remove `FirstParentFilterEnabled` from repo settings - it should not been saved
* move toggle button from repository toolbar to histories switcher
* tooltip translations
* new icon for `Icons.FirstParentFilter`
* extends commit graph to support `--first-parent` option

--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -76,7 +76,7 @@
               </ListBox.ItemsPanel>
 
               <ListBoxItem>
-                <Grid Classes="view_mode" ColumnDefinitions="32,*,Auto">
+                <Grid Classes="view_mode" ColumnDefinitions="32,*,Auto,Auto">
                   <Path Grid.Column="0" Width="12" Height="12" Data="{StaticResource Icons.Histories}"/>
                   <TextBlock Grid.Column="1" Classes="primary" Text="{DynamicResource Text.Histories}"/>
                   <ToggleButton Grid.Column="2"
@@ -84,6 +84,14 @@
                                 Width="32" Height="26"
                                 IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=UseTwoColumnsLayoutInHistories, Mode=TwoWay}"
                                 ToolTip.Tip="{DynamicResource Text.Histories.DisplayMode}"/>
+                  <ToggleButton Grid.Column="3"
+                                Classes="line_path"
+                                Width="32" Height="26"
+                                Background="Transparent"
+                                IsChecked="{Binding EnableFirstParentInHistories, Mode=TwoWay}"
+                                ToolTip.Tip="{DynamicResource Text.Repository.FirstParentFilterToggle}">
+                    <Path Width="12" Height="12" Data="{StaticResource Icons.FirstParentFilter}"/>
+                  </ToggleButton>
                 </Grid>
               </ListBoxItem>
 
