--- a/src/Views/Statistics.axaml
+++ b/src/Views/Statistics.axaml
@@ -8,13 +8,14 @@
                     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
                     x:Class="SourceGit.Views.Statistics"
                     x:DataType="vm:Statistics"
+                    x:Name="ThisControl"
                     Title="{DynamicResource Text.Statistics}"
                     Width="800" Height="450"
                     WindowStartupLocation="CenterOwner"
                     CanResize="False">
   <Grid RowDefinitions="Auto,Auto,*">
     <!-- Title bar -->
-    <Grid Grid.Row="0" ColumnDefinitions="Auto,*,Auto" Height="30">
+    <Grid Grid.Row="0" ColumnDefinitions="Auto,*,Auto" Height="30" IsVisible="{Binding !#ThisControl.UseSystemWindowFrame}">
       <Border Grid.Column="0" Grid.ColumnSpan="3"
               Background="{DynamicResource Brush.TitleBar}"
               BorderThickness="0,0,0,1" BorderBrush="{DynamicResource Brush.Border0}"
