--- a/src/Views/AssumeUnchangedManager.axaml
+++ b/src/Views/AssumeUnchangedManager.axaml
@@ -8,6 +8,7 @@
                     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
                     x:Class="SourceGit.Views.AssumeUnchangedManager"
                     x:DataType="vm:AssumeUnchangedManager"
+                    x:Name="ThisControl"
                     Icon="/App.ico"
                     Title="{DynamicResource Text.AssumeUnchanged}"
                     Width="600" Height="400"
@@ -15,7 +16,7 @@
                     WindowStartupLocation="CenterOwner">
   <Grid RowDefinitions="Auto,*">    
     <!-- TitleBar -->
-    <Grid Grid.Row="0" ColumnDefinitions="Auto,*,Auto" Height="30">
+    <Grid Grid.Row="0" ColumnDefinitions="Auto,*,Auto" Height="30" IsVisible="{Binding !#ThisControl.UseSystemWindowFrame}">
       <Border Grid.Column="0" Grid.ColumnSpan="3"
               Background="{DynamicResource Brush.TitleBar}"
               BorderThickness="0,0,0,1" BorderBrush="{DynamicResource Brush.Border0}"
