--- a/src/Views/Launcher.axaml
+++ b/src/Views/Launcher.axaml
@@ -8,13 +8,14 @@
                     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
                     x:Class="SourceGit.Views.Launcher"
                     x:DataType="vm:Launcher"
+                    x:Name="ThisControl"
                     Icon="/App.ico"
                     Title="SourceGit"
                     MinWidth="1024" MinHeight="600"
                     WindowStartupLocation="CenterScreen"> 
-  <Grid x:Name="MainLayout">
+  <Grid>
     <Grid.RowDefinitions>
-      <RowDefinition Height="38"/>
+      <RowDefinition Height="{Binding #ThisControl.CaptionHeight}"/>
       <RowDefinition Height="*"/>
     </Grid.RowDefinitions>
 
@@ -72,7 +73,7 @@
       <v:LauncherTabBar Grid.Column="1" Height="30" VerticalAlignment="Bottom"/>
 
       <!-- Caption Buttons (Windows/Linux)-->
-      <Border Grid.Column="2" Margin="32,0,0,0" IsVisible="{OnPlatform True, macOS=False}">
+      <Border Grid.Column="2" Margin="32,0,0,0" IsVisible="{Binding #ThisControl.IsRightCaptionButtonsVisible}">
         <v:CaptionButtons Height="30" VerticalAlignment="Top"/>
       </Border>
     </Grid>
