--- a/src/Views/Preference.axaml
+++ b/src/Views/Preference.axaml
@@ -18,7 +18,7 @@
                     WindowStartupLocation="CenterScreen">
   <Grid RowDefinitions="Auto,Auto" MinWidth="600">
     <!-- TitleBar -->
-    <Grid Grid.Row="0" ColumnDefinitions="Auto,*,Auto" Height="30">
+    <Grid Grid.Row="0" ColumnDefinitions="Auto,*,Auto" Height="30" IsVisible="{Binding !#ThisControl.UseSystemWindowFrame}">
       <Border Grid.Column="0" Grid.ColumnSpan="3"
               Background="{DynamicResource Brush.TitleBar}"
               BorderThickness="0,0,0,1" BorderBrush="{DynamicResource Brush.Border0}"
@@ -57,7 +57,7 @@
           <TabItem.Header>
             <TextBlock Classes="tab_header" Text="{DynamicResource Text.Preference.General}"/>
           </TabItem.Header>
-          <Grid Margin="8" RowDefinitions="32,32,32,32,32,32,32" ColumnDefinitions="Auto,*">
+          <Grid Margin="8" RowDefinitions="32,32,32,32,32,32" ColumnDefinitions="Auto,*">
             <TextBlock Grid.Row="0" Grid.Column="0"
                        Text="{DynamicResource Text.Preference.General.Locale}"
                        HorizontalAlignment="Right"
@@ -121,11 +121,6 @@
 
             <CheckBox Grid.Row="5" Grid.Column="1"
                       Height="32"
-                      Content="{DynamicResource Text.Preference.General.UseFixedTabWidth}"
-                      IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=UseFixedTabWidth, Mode=TwoWay}"/>
-
-            <CheckBox Grid.Row="6" Grid.Column="1"
-                      Height="32"
                       Content="{DynamicResource Text.Preference.General.Check4UpdatesOnStartup}"
                       IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=Check4UpdatesOnStartup, Mode=TwoWay}"/>
           </Grid>
@@ -135,7 +130,7 @@
           <TabItem.Header>
             <TextBlock Classes="tab_header" Text="{DynamicResource Text.Preference.Appearance}"/>
           </TabItem.Header>
-          <Grid Margin="8" RowDefinitions="32,32,32,32,32,32" ColumnDefinitions="Auto,*">
+          <Grid Margin="8" RowDefinitions="32,32,32,32,32,32,32,Auto" ColumnDefinitions="Auto,*">
             <TextBlock Grid.Row="0" Grid.Column="0"
                        Text="{DynamicResource Text.Preference.Appearance.Theme}"
                        HorizontalAlignment="Right"
@@ -201,6 +196,18 @@
             <CheckBox Grid.Row="5" Grid.Column="1"
                       Content="{DynamicResource Text.Preference.Appearance.OnlyUseMonoFontInEditor}"
                       IsChecked="{Binding OnlyUseMonoFontInEditor, Mode=TwoWay}"/>
+
+            <CheckBox Grid.Row="6" Grid.Column="1"
+                      Height="32"
+                      Content="{DynamicResource Text.Preference.Appearance.UseFixedTabWidth}"
+                      IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=UseFixedTabWidth, Mode=TwoWay}"/>
+
+            <CheckBox Grid.Row="7" Grid.Column="1"
+                      Height="32"
+                      Content="{DynamicResource Text.Preference.Appearance.UseNativeWindowFrame}"
+                      IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSystemWindowFrame, Mode=OneTime}"
+                      IsVisible="{OnPlatform False, Linux=True}"
+                      IsCheckedChanged="OnUseNativeWindowFrameChanged"/>
           </Grid>
         </TabItem>
 
