fix: `TreeView` do NOT support NavigationMethod.Direction with invisible nodes (#391)

--- a/src/Views/Welcome.axaml
+++ b/src/Views/Welcome.axaml
@@ -42,6 +42,7 @@
                   ScrollViewer.VerticalScrollBarVisibility="Auto"
                   Loaded="SetupTreeViewDragAndDrop"
                   LostFocus="OnTreeViewLostFocus"
+                  SelectionChanged="OnTreeViewSelectionChanged"
                   KeyDown="OnTreeViewKeyDown">
           <TreeView.ContextMenu>
             <ContextMenu>
