--- a/src/Views/Checkout.axaml
+++ b/src/Views/Checkout.axaml
@@ -13,7 +13,12 @@
                Classes="bold"
                Text="{DynamicResource Text.Checkout}"/>
 
-    <Grid Margin="0,16,0,0" RowDefinitions="32,32" ColumnDefinitions="140,*">
+    <Grid Margin="0,16,0,0" ColumnDefinitions="140,*">
+      <Grid.RowDefinitions>
+        <RowDefinition Height="32"/>
+        <RowDefinition Height="Auto" MinHeight="32"/>
+      </Grid.RowDefinitions>
+      
       <TextBlock Grid.Row="0" Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
@@ -27,23 +32,23 @@
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
                  Text="{DynamicResource Text.Checkout.LocalChanges}"/>
-      <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
-        <StackPanel.Resources>
+      <WrapPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
+        <WrapPanel.Resources>
           <ac:EnumToBoolConverter x:Key="EnumToBoolConverter"/>
-        </StackPanel.Resources>
+        </WrapPanel.Resources>
         
         <RadioButton Content="{DynamicResource Text.CreateBranch.LocalChanges.DoNothing}"
                      GroupName="LocalChanges"
+                     Margin="0,0,8,0"
                      IsChecked="{Binding PreAction, Mode=TwoWay, Converter={StaticResource EnumToBoolConverter}, ConverterParameter={x:Static m:DealWithLocalChanges.DoNothing}}"/>
         <RadioButton Content="{DynamicResource Text.CreateBranch.LocalChanges.StashAndReply}"
                      GroupName="LocalChanges"
-                     Margin="8,0,0,0"
+                     Margin="0,0,8,0"
                      IsChecked="{Binding PreAction, Mode=TwoWay, Converter={StaticResource EnumToBoolConverter}, ConverterParameter={x:Static m:DealWithLocalChanges.StashAndReaply}}"/>
         <RadioButton Content="{DynamicResource Text.CreateBranch.LocalChanges.Discard}"
                      GroupName="LocalChanges"
-                     Margin="8,0,0,0"
                      IsChecked="{Binding PreAction, Mode=TwoWay, Converter={StaticResource EnumToBoolConverter}, ConverterParameter={x:Static m:DealWithLocalChanges.Discard}}"/>
-      </StackPanel>
+      </WrapPanel>
     </Grid>
   </StackPanel>
 </UserControl>
